language/move-compiler/tests/move_check/parser/function_native_with_body.exp
error[E02007]: invalid 'fun' declaration
  ┌─ tests/move_check/parser/function_native_with_body.move:3:5
  │
3 │     native fun fn() {}
  │     ^^^^^^^^^^^^^^^^^^
  │     │               │
  │     │               Remove '{..}' here.
  │     Function body '{..}' is not expected in  native function

